--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cloud hosting For Everyone</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/utility.css">
+    <link rel="icon" href="images/favicon.png">
 </head>
 <body>
     <!-- Nav bar -->
@@ -47,20 +50,112 @@
             </div>
         </div>
     </section>
-    <!-- job Start -->
-    <section class="states">
+    <!-- job Stats -->
+    <section class="stats">
         <div class="container">
             <h3 class="states-heading text-center my-1">Welcome to the best platform for buildings application for all types with modern architecture and scaling</h3>
             <div class="grid grid-3 text-center my-4">
                 <div>
-                    <i class="fas fa server fa-3x"></i>
+                    <i class="fas fa-server fa-3x"></i>
                     <h3>10,349,405</h3>
                     <p class="text-secondary">Deployment</p>
+                </div>
+                <div>
+                    <i class="fas fa-upload fa-3x"></i>
+                    <h3>987 TB</h3>
+                    <p class="text-secondary">Published</p>
+                </div>
+                <div>
+                    <i class="fas fa-project-diagram fa-3x"></i>
+                    <h3>2,243.365</h3>
+                    <p class="text-secondary">Projects</p>
                 </div>
                 <div></div>
                 <div></div>
             </div>
         </div>
     </section>
+    <!-- cli-->
+    <section class="cli">
+        <div class="container grid">
+            <img src="images/cli.png" alt="">
+            <div class="card">
+                <h3>Easy to use, cross Platform</h3>
+            </div>
+            <div class="card">
+                <h3>Deploy in Second</h3>
+            </div>
+        </div>
+    </section>
+    <!-- Cloud -->
+    <section class="cloud bg-primary my-2 py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Extreme cloud hosting</h2>
+                <p class="lead my-1">
+                    Cloud hosting like you have never seen. First ,efficient and scable
+                </p>
+                <a href="features.html" class="btn btn-dark">Read more</a>
+            </div>
+            <img src="images/cloud.png" alt="">
+        </div>
+    </section>
+    <!-- Supported Languge -->
+    <section class="language">
+        <h2 class="md text-center my-2">Supported Language</h2>
+        <div class="container flex">
+            <div class="card">
+                <h4>Node.js</h4>
+                <img src="images/logos/node.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Python</h4>
+                <img src="images/logos/python.png" alt="">
+            </div>
+            <div class="card">
+                <h4>C#</h4>
+                <img src="images/logos/csharp.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Ruby</h4>
+                <img src="images/logos/ruby.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Scala</h4>
+                <img src="images/logos/scala.png" alt="">
+            </div>
+            <div class="card">
+                <h4>clojure</h4>
+                <img src="images/logos/clojure.png" alt="">
+            </div>
+            <div class="card">
+                <h4>Php</h4>
+                <img src="images/logos/php.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+    <!-- <footer class="footer bg-dark py-5">
+        <div class="container grid grid-3">
+            <div>
+                <h1>Sandwich</h1>
+                <p>Copyrigt&copy;2023</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="features.html">Feature</a></li>
+                    <li><a href="docs.html">Docs</a></li>
+                </ul>
+            </nav>
+            <div class="social-media">
+                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
+    </footer> -->
+   
 </body>
 </html>
