--- a/feature.html
+++ b/feature.html
@@ -2,109 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud hosting For Everyone</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/utilitiy.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/utility.css">
-    <link rel="icon" href="images/favicon.png">
+    <title>Sandwich | Food  For Everyone</title>
 </head>
 <body>
-    <!-- Nav bar -->
+    <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Sandwich</h1>
+            <h1 class="logo">Loruki.</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Feature</a></li>
+                    <li><a href="feature.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
         </div>
     </div>
+
     <!-- Head -->
-    <section>
-        <div class="features-head bg-primary py-3">
-            <div class="container grid">
-                <div>
-                    <h1>
-                        <div class="xl">Features</div>
-                    </h1>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, possimus!</p>
-                </div>
-                <img src="images/server.png" alt="">
-            </div>
-        </div>
-    </section>
-    <!-- Sub head -->
-    <section class="features-sub-head bg-light py3">
+    <section class="features-head bg-primary py-3">
         <div class="container grid">
             <div>
-                <h1>
-                    <div class="md">Jamal er Ma Pita Ghor</div>
-                </h1>
-                <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo nulla ipsa minus, dignissimos repellat quia blanditiis porro incidunt cupiditate autem numquam fugit quae distinctio asperiores.</p>
+                <h1 class="xl">Features</h1>
+                <p class="lead">
+                    Check out the features of Loruki that separate us from the
+						competition
+                </p>
+            </div>
+            <img src="images/server.png" alt="">
+        </div>
+    </section>
+
+    <!-- Sub head -->
+    <section class="features-sub-head bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">The Loruki Platform</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor cupiditate dignissimos temporibus perspiciatis quae! Suscipit qui, consectetur ea consequatur, doloribus repellendus quasi, aut corporis nam alias culpa. Nostrum, inventore accusantium!
+                </p>
             </div>
             <img src="images/server2.png" alt="">
         </div>
     </section>
-    <!-- feature main -->
-    <section>
-        <div class="features-main my-2">
+
+    <section class="features-main my-2">
+        <div class="container grid grid-3">
             <div class="card flex">
                 <i class="fas fa-server fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim quos dicta molestiae amet tenetur, eligendi accusantium expedita commodi, ipsam fugit modi assumenda exercitationem delectus laudantium? Eius earum accusantium distinctio!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nemo saepe corrupti et dolorem voluptate at, nostrum rem voluptatem ab alias quia molestiae ea, libero nihil deserunt. Molestias, eum? Necessitatibus!</p>
             </div>
             <div class="card flex">
                 <i class="fas fa-network-wired fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim quos dicta molestiae amet tenetur, eligendi accusantium expedita commodi, ipsam fugit modi assumenda exercitationem delectus laudantium? Eius earum accusantium distinctio!</p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                    recusandae perferendis culpa, reiciendis a itaque debitis qui vel
+                    dignissimos ipsum!
+                </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-laptop-code fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim quos dicta molestiae amet tenetur, eligendi accusantium expedita commodi, ipsam fugit modi assumenda exercitationem delectus laudantium? Eius earum accusantium distinctio!</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
+                </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-database fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim quos dicta molestiae amet tenetur, eligendi accusantium expedita commodi, ipsam fugit modi assumenda exercitationem delectus laudantium? Eius earum accusantium distinctio!</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, a!
+                </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-power-off fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim quos dicta molestiae amet tenetur, eligendi accusantium expedita commodi, ipsam fugit modi assumenda exercitationem delectus laudantium? Eius earum accusantium distinctio!</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
+                </p>
             </div>
             <div class="card flex">
                 <i class="fas fa-upload fa-3x"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt enim quos dicta molestiae amet tenetur, eligendi accusantium expedita commodi, ipsam fugit modi assumenda exercitationem delectus laudantium? Eius earum accusantium distinctio!</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis,
+                    magnam.
+                </p>
             </div>
         </div>
     </section>
-    
-    <!-- Footer -->
-    <!-- <footer class="footer bg-dark py-5">
-        <div class="container grid grid-3">
-            <div>
-                <h1>Sandwich</h1>
-                <p>Copyrigt&copy;2023</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Feature</a></li>
-                    <li><a href="docs.html">Docs</a></li>
-                </ul>
-            </nav>
-            <div class="social-media">
-                <a href="#"><i class="fab fa-github fa-2x"></i></a>
-                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            </div>
-        </div>
-    </footer> -->
 
-     <!-- Footer -->
-     <footer class="footer bg-dark py-5">
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
                 <h1>Loruki
@@ -114,7 +105,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Features</a></li>
+                    <li><a href="feature.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
@@ -126,6 +117,5 @@
             </div>
         </div>
     </footer>
-   
 </body>
 </html>
