--- a/index.html
+++ b/index.html
@@ -2,63 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud hosting For Everyone</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/utility.css">
-    <link rel="icon" href="images/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Sandwich | Food For Everyone</title>
 </head>
 <body>
-    <!-- Nav bar -->
+    <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Sandwich</h1>
+            <h1 class="logo">Sandwich.</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Feature</a></li>
+                    <li><a href="feature.html">Features</a></li>
                     <li><a href="docs.html">Docs</a></li>
                 </ul>
             </nav>
         </div>
     </div>
+    
     <!-- Showcase -->
     <section class="showcase">
         <div class="container grid">
             <div class="showcase-text">
-                <h1>Easier Deployment</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quas vero, tenetur molestias quod eligendi reprehenderit reiciendis voluptatum eum minus?</p>
-                <!-- <a href="features.html" class="btn btn-outline">Read More</a> -->
+                <h1>Easier Process</h1>
+                <p>Deploy web apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the form to try a demo of our platform</p>
                 <a href="features.html" class="btn btn-outline">Read More</a>
             </div>
+
             <div class="showcase-form card">
                 <h2>Request a Demo</h2>
-                <form >
+                 <!--  <form name="contact" netlify-honeypot="bot-field" method="POST" data-netlify="true">
+                    <input type="hidden" name="form-name" value="contact">
+                    <p class="hidden">
+                        <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
+                      </p>
                     <div class="form-control">
-                        <input type="text" name="name" placeholder="Write Your Name" required>
+                        <input type="text" name="name" placeholder="Name" required>
                     </div>
                     <div class="form-control">
-                        <input type="text" name="company" placeholder="Write Your Company Name" required>
+                        <input type="text" name="company" placeholder="Company Name" required>
                     </div>
                     <div class="form-control">
-                        <input type="email" name="email" placeholder=" Your Email" required>
+                        <input type="email" name="email" placeholder="Email" required>
                     </div>
-                    <input type="submit" value="send" class="btn btn-primary">
+                    <input type="submit" value="Send" class="btn btn-primary">
+                </form> -->
+                 <form>
+                    <div class="form-control">
+                        <input type="text" name="name" placeholder="Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="text" name="company" placeholder="Company Name" required>
+                    </div>
+                    <div class="form-control">
+                        <input type="email" name="email" placeholder="Email" required>
+                    </div>
+                    <input type="submit" value="Send" class="btn btn-primary">
                 </form>
             </div>
         </div>
     </section>
-    <!-- job Stats -->
+
+    <!-- Stats -->
     <section class="stats">
         <div class="container">
-            <h3 class="states-heading text-center my-1">Welcome to the best platform for buildings application for all types with modern architecture and scaling</h3>
+            <h3 class="stats-heading text-center my-1">
+                Welcome to the best platform for building applications of all types with modern architecture and scaling
+            </h3>
+
             <div class="grid grid-3 text-center my-4">
                 <div>
                     <i class="fas fa-server fa-3x"></i>
                     <h3>10,349,405</h3>
-                    <p class="text-secondary">Deployment</p>
+                    <p class="text-secondary">Deployments</p>
                 </div>
                 <div>
                     <i class="fas fa-upload fa-3x"></i>
@@ -67,42 +86,43 @@
                 </div>
                 <div>
                     <i class="fas fa-project-diagram fa-3x"></i>
-                    <h3>2,243.365</h3>
+                    <h3>2,343,265</h3>
                     <p class="text-secondary">Projects</p>
                 </div>
-                <div></div>
-                <div></div>
             </div>
         </div>
     </section>
-    <!-- cli-->
+
+    <!-- Cli -->
     <section class="cli">
         <div class="container grid">
             <img src="images/cli.png" alt="">
             <div class="card">
-                <h3>Easy to use, cross Platform</h3>
+                <h3>Easy to use, cross platform CLI</h3>
             </div>
             <div class="card">
-                <h3>Deploy in Second</h3>
+                <h3>Deploy in seconds</h3>
             </div>
         </div>
     </section>
+
     <!-- Cloud -->
     <section class="cloud bg-primary my-2 py-2">
         <div class="container grid">
             <div class="text-center">
-                <h2 class="lg">Extreme cloud hosting</h2>
-                <p class="lead my-1">
-                    Cloud hosting like you have never seen. First ,efficient and scable
-                </p>
-                <a href="features.html" class="btn btn-dark">Read more</a>
+                <h2 class="lg">Extreme Cloud Hosting</h2>
+                <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient and scalable</p>
+                <a href="features.html" class="btn btn-dark">Read More</a>
             </div>
             <img src="images/cloud.png" alt="">
         </div>
     </section>
-    <!-- Supported Languge -->
-    <section class="language">
-        <h2 class="md text-center my-2">Supported Language</h2>
+
+    <!-- Languages -->
+    <section class="languages">
+        <h2 class="md text-center my-2">
+            Supported Languages
+        </h2>
         <div class="container flex">
             <div class="card">
                 <h4>Node.js</h4>
@@ -111,54 +131,32 @@
             <div class="card">
                 <h4>Python</h4>
                 <img src="images/logos/python.png" alt="">
-            </div>
-            <div class="card">
+              </div>
+              <div class="card">
                 <h4>C#</h4>
                 <img src="images/logos/csharp.png" alt="">
-            </div>
-            <div class="card">
+              </div>
+              <div class="card">
                 <h4>Ruby</h4>
                 <img src="images/logos/ruby.png" alt="">
-            </div>
-            <div class="card">
+              </div>
+              <div class="card">
+                <h4>PHP</h4>
+                <img src="images/logos/php.png" alt="">
+              </div>
+              <div class="card">
                 <h4>Scala</h4>
                 <img src="images/logos/scala.png" alt="">
-            </div>
-            <div class="card">
-                <h4>clojure</h4>
+              </div>
+              <div class="card">
+                <h4>Clojure</h4>
                 <img src="images/logos/clojure.png" alt="">
-            </div>
-            <div class="card">
-                <h4>Php</h4>
-                <img src="images/logos/php.png" alt="">
-            </div>
+              </div>
         </div>
     </section>
-    <!-- Footer -->
-    <!-- <footer class="footer bg-dark py-5">
-        <div class="container grid grid-3">
-            <div>
-                <h1>Sandwich</h1>
-                <p>Copyrigt&copy;2023</p>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="features.html">Feature</a></li>
-                    <li><a href="docs.html">Docs</a></li>
-                </ul>
-            </nav>
-            <div class="social-media">
-                <a href="#"><i class="fab fa-github fa-2x"></i></a>
-                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            </div>
-        </div>
-    </footer> -->
 
-     <!-- Footer -->
-     <footer class="footer bg-dark py-5">
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
         <div class="container grid grid-3">
             <div>
                 <h1>Loruki
@@ -180,6 +178,5 @@
             </div>
         </div>
     </footer>
-   
 </body>
 </html>
